fixed some styles/working on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -94,14 +94,6 @@ body {
 
 }
 
-.carousel {
-	width: 220px;
-	height: 220px;
-	background: red;
-	border-radius: 150px;
-}
-
-
 .explore-arrow {
 	color: red;
 }
